compilador/Test/Cases/should-fail/test_propios_Err_Type_3.pcf
let tst : Nat = ifz 0 then pred else 4